# IN3110

./: README.md
assignment1/: friendly_greeting.txt  less_friendly_greeting.txt
assignment2/: array_class.py  test_array.py
assignment3/: README.md  comments to per review.md  pyproject.toml  timing-report.txt
assignment3/instapy/: __main__.py  cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/test/: test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  asyncstruggle.py  collect_dates.py  fetch_player_statistics.py  filter_urls.py  findindex_sum.py  jalla.py  requesting_urls.py  time_planner.py  wiki_race_challenge.py
assignment4/tests/: test_filter_urls.py
assignment5/: README.md  app.py  http_cache.sqlite  strompris.py
assignment5/docs/: conf.py  strompris.rst
assignment5/docs/_build/doctrees/: environment.pickle  index.doctree  strompris.doctree
assignment5/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  strompris.html
assignment5/docs/_build/html/_sources/: index.rst.txt
assignment5/docs/_build/html/_static/: documentation_options.js
assignment5/docs/source/: apppy.rst  conf.py  index.rst  stromprispy.rst
assignment5/templates/: activity.html  strompris.html
assignment5/tests/: test_strompris.py
